--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,18 @@
 body{
-  background-color: #9266ff;
+  background-color: #039be5;
 }
 .className{
-  background-color: #3f3160;
-  min-height:500px;
-  width: 400px;
-  margin: 40px auto;
+  background-color:#4fc3f7;
+  min-height:700px;
+  width: 600px;
+  margin: 50px auto;
 }
 
 #phoneBookApp input{
   background-color: rgba(27, 112, 137, 1);
   border: 0; 
   color: #fff;
-  width: 200px;
+  width: 400px;
   height: 50px;
   margin: 20px;
   padding: 0 20px;
